--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -62,7 +62,7 @@
     <add key="askMiraiLink" value="http://localhost:53706"/> 
     <add key="NumberOfRecored" value="5"/>
     <add key="AnswerPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\answerImages"/>
-    <add key="BookAppointmentLink" value="http://localhost:51418/app/book/appointment.aspx"/>
+    <add key="BookAppointmentLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx"/>
     <add key="website" value="consult.miraihealth.com"/>
   </appSettings>
 
