--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -28,14 +28,14 @@
     <add key="ContactUsEmail" value="priyanka.p@vertisinfotech.com"/>
     <add key="ErrorEmailID" value="priyanka.p@vertisinfotech.com"/>
     
-    <add key="SMTPSERVER" value="smtpout.secureserver.net" />
-    <add key="SmtpServerUsername" value="service@miraihealth.com" />
-    <add key="SmtpServerPassword" value="ServiceMiraiHealth0114" />
-    <add key="SMTPPort" value="25" />
-    <add key="isUseDefaultCredentials" value="true" />
-    <add key="isEnableSSl" value="false" /> 
-    <add key="UNAUTHENTICATEDSMTPSERVER" value="10.1.1.178" />
-    <add key="isSMTPAuthentication" value="true" />	
+   <add key="isSMTPAuthentication" value="true"/>
+   <add key="SMTPSERVER" value="smtp.gmail.com"/>
+   <add key="UNAUTHENTICATEDSMTPSERVER" value="10.10.10.11"/>
+   <add key="SmtpServerUsername" value="noreply@vertisinfotech.com"/>
+   <add key="SmtpServerPassword" value="Smtp!2#4"/>
+   <add key="SMTPPort" value="587"/>
+   <add key="isUseDefaultCredentials" value="false"/>
+   <add key="isEnableSSl" value="true"/>
    
     <add key="defaultUrl" value="http://localhost:53706/"/>
     <add key="NumberOfRecoredonQuestionList" value="50"/>
@@ -51,7 +51,7 @@
     <add key="OnPatientThankSendSMS" value="Hello, We are pleased to inform you that the user has thanked you for answering the question. Mirai Health Team (service@miraihealth.com)"/>
     <add key="OnRemoveQuestionFromListEmail" value="Hello, Your question was considered inappropriate and has been rejected by the administrator."/>
     <add key="OnRemoveQuestionFromListSMS" value="Hello, Your question was considered inappropriate and has been rejected by the administrator. Mirai Health Team (service@miraihealth.com)"/>
-    <add key="FromEmail" value="service@miraihealth.com"/>
+    <add key="FromEmail" value="noreply@vertisinfotech.com"/>
     <add key="OnDoctorEndoresedSendSMS" value="Hello, We are pleased to inform you that the doctor has endorsed you for answering the question. AskMirai Services Team"/>
     <add key="MiraiHealthEmail" value="mailto:ask@miraihealth.com"/>
     <add key="websiteUrl" value="consult.miraihealth.com"/>
