--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -438,8 +438,6 @@
       <SubType>Designer</SubType>
     </Content>
     <None Include="Properties\PublishProfiles\consult.pubxml" />
-    <None Include="Properties\PublishProfiles\ConsultToDemo.pubxml" />
-    <None Include="Properties\PublishProfiles\ConsultToStaging.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\bootstrap-alert.js" />
     <Content Include="Scripts\bootstrap-button.js" />
@@ -556,6 +554,7 @@
     <Content Include="Views\User\ManageDoctors.cshtml" />
     <Content Include="Views\Shared\_AutoCompleteSearch.cshtml" />
     <Content Include="Views\Patients\PatientQuestionDetails.cshtml" />
+    <Content Include="Views\FindDoctor\FindDoctors.cshtml" />
     <Content Include="Views\Patients\AskDoctor.cshtml" />
     <Content Include="Views\admin\assignquestion.cshtml" />
     <Content Include="Views\admin\Report.cshtml" />
@@ -572,6 +571,7 @@
     <Content Include="Views\Patients\similarQuestions.cshtml" />
     <Content Include="Views\User\DoctorSignUp.cshtml" />
     <Content Include="Views\User\Verifyemail.cshtml" />
+    <Content Include="Views\Home\topics.cshtml" />
     <Content Include="Views\Home\FindDoctors.cshtml" />
     <Content Include="Views\Home\NoPrivilegeError.cshtml" />
   </ItemGroup>
