--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -76,7 +76,7 @@
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
     <authentication mode="Forms">
-      <forms loginUrl="/User/Login" timeout="2880"/>
+      <forms loginUrl="/login" timeout="2880"/>
     </authentication>
     <pages>
       <namespaces>
