--- a/MiraiConsultMVC/bin/MiraiConsultMVC.dll.config
+++ b/MiraiConsultMVC/bin/MiraiConsultMVC.dll.config
@@ -7,6 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MiraiConsultMVC-20140715181711;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MiraiConsultMVC-20140715181711.mdf" providerName="System.Data.SqlClient"/>
@@ -40,7 +41,7 @@
     <add key="defaultUrl" value="http://localhost:53706/"/>
     <add key="NumberOfRecoredonQuestionList" value="50"/>
     <add key="SuperAdminUserPassword" value="admin!2#4"/>
-    <add key="ResetPasswordLink" value="http://localhost:53706/User/ResetPassword"/>
+    <add key="ResetPasswordLink" value="http://localhost:53706/user/resetPassword"/>
     <add key="DocApproveNotificationTextMsg" value="Hello, your Mirai Consult account has been validated. You are now ready to login and use our services. Mirai Health Team (service@miraihealth.com)"/>
     <add key="DocRejectNotificationTextMsg" value="Hello, your registration request has been rejected by the administrator. Mirai Health Team (service@miraihealth.com)"/>
     <add key="OnDocAssignQuestionSendEmail" value="A user has addressed the following question to you."/>
@@ -55,13 +56,13 @@
     <add key="OnDoctorEndoresedSendSMS" value="Hello, We are pleased to inform you that the doctor has endorsed you for answering the question. AskMirai Services Team"/>
     <add key="MiraiHealthEmail" value="mailto:ask@miraihealth.com"/>
     <add key="websiteUrl" value="consult.miraihealth.com"/>
-    <add key="shareMessage" value="has invited you to AskMirai"/>
+    <add key="shareMessage" value="has invited you to Mirai Consult"/>
     <add key="DocConnectApptUrl" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx?doc="/>
     <add key="EmailVerificationLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx?doc="/>
     <add key="DoctorPhotosUrl" value="http://localhost:53706/Content/image/DoctorPhotos/"/>
     <add key="DoctorPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\DoctorPhotos"/>
     <add key="FacebookAppKey" value="1480281325544968"/>
-    <add key="askMiraiLink" value="http://localhost:53706"/> 
+    <add key="askMiraiLink" value="http://localhost:53706/"/> 
     <add key="NumberOfRecored" value="5"/>
     <add key="AnswerPhotosPath" value="F:\Projects\consult-mvc\MiraiConsultMVC\Content\image\answerImages"/>
     <add key="BookAppointmentLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx"/>
@@ -69,12 +70,13 @@
   </appSettings>
 
   <system.web>
+    <globalization culture="en-US" uiCulture="en"/>
     <customErrors mode="On" >
       </customErrors>
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
     <authentication mode="Forms">
-      <forms loginUrl="/User/Login" timeout="2880"/>
+      <forms loginUrl="/login" timeout="2880"/>
     </authentication>
     <pages>
       <namespaces>
@@ -190,5 +192,4 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
-  
 </configuration>
