--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -30,11 +30,13 @@
     <add key="ErrorEmailID" value="priyanka.p@vertisinfotech.com"/>
     
    <add key="isSMTPAuthentication" value="true"/>
-   <add key="SMTPSERVER" value="smtp.gmail.com"/>
+   
    <add key="UNAUTHENTICATEDSMTPSERVER" value="10.10.10.11"/>
-   <add key="SmtpServerUsername" value="noreply@vertisinfotech.com"/>
-   <add key="SmtpServerPassword" value="Smtp!2#4"/>
-   <add key="SMTPPort" value="587"/>
+    
+   <add key="SMTPSERVER" value="smtpout.secureserver.net" />
+    <add key="SmtpServerUsername" value="service@miraihealth.com" />
+    <add key="SmtpServerPassword" value="ServiceMiraiHealth0114" />
+    <add key="SMTPPort" value="25" />
    <add key="isUseDefaultCredentials" value="false"/>
    <add key="isEnableSSl" value="true"/>
    
