--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -10,11 +10,11 @@
 
   </configSections>
   <connectionStrings>
-    <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.30\SQLSERVER2012;Initial Catalog=AsquareMirai;Persist Security Info=True;User ID=sa;Password=Vertis!2#" providerName="System.Data.SqlClient"/>
+    <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.36\SQLEXPRESS;Initial Catalog=AsqaureMirai_Staging;Persist Security Info=True;User ID=sa;Password=Vertis!2#" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="NumberOfRecored" value="5"/>
-    <add key="constr" value="server=10.10.10.30\SQLSERVER2012;uid=sa;pwd=Vertis!2#;database=AsquareMirai;"/>
+    <add key="constr" value="server=10.10.10.36\SQLEXPRESS;uid=sa;pwd=Vertis!2#;database=AsqaureMirai_Staging;"/>
     <add key="webpages:Version" value="2.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="PreserveLoginUrl" value="true"/>
