--- a/MiraiConsultMVC/MiraiConsultMVC.csproj
+++ b/MiraiConsultMVC/MiraiConsultMVC.csproj
@@ -444,6 +444,7 @@
     <Content Include="App_Browsers\ie.browser" />
     <Content Include="App_Browsers\IosChrome.browser" />
     <None Include="Properties\PublishProfiles\consult.pubxml" />
+    <None Include="Properties\PublishProfiles\ConsultToFileSystem.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\bootstrap-alert.js" />
     <Content Include="Scripts\bootstrap-button.js" />
