--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -10,12 +10,11 @@
 
   </configSections>
   <connectionStrings>
-    <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.36\SQLEXPRESS;Initial Catalog=AsqaureMirai_Staging;Persist Security Info=True;User ID=sa;Password=Vertis!2#" providerName="System.Data.SqlClient"/>
+    <add name="AsquareMiraiConnectionString" connectionString="Data Source=SQL2012;Initial Catalog=AsquareMirai_Staging;Persist Security Info=True;User ID=sa;Password=vertis!2#" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="NumberOfRecored" value="5"/>
-    <add key="constr" value="server=10.10.10.36\SQLEXPRESS;uid=sa;pwd=Vertis!2#;database=AsqaureMirai;"/>
-
+    <add key="constr" value="server=SQL2012;uid=sa;pwd=vertis!2#;database=AsquareMirai;"/>
     <add key="webpages:Version" value="2.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="PreserveLoginUrl" value="true"/>
@@ -28,18 +27,14 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ContactUsEmail" value="priyanka.p@vertisinfotech.com"/>
     <add key="ErrorEmailID" value="priyanka.p@vertisinfotech.com"/>
-    
-   <add key="isSMTPAuthentication" value="true"/>
-   
-   <add key="UNAUTHENTICATEDSMTPSERVER" value="10.10.10.11"/>
-    
-   <add key="SMTPSERVER" value="smtpout.secureserver.net" />
+    <add key="isSMTPAuthentication" value="true"/>
+    <add key="UNAUTHENTICATEDSMTPSERVER" value="10.10.10.11"/>
+    <add key="SMTPSERVER" value="smtpout.secureserver.net" />
     <add key="SmtpServerUsername" value="service@miraihealth.com" />
     <add key="SmtpServerPassword" value="ServiceMiraiHealth0114" />
     <add key="SMTPPort" value="25" />
-   <add key="isUseDefaultCredentials" value="false"/>
-   <add key="isEnableSSl" value="true"/>
-   
+    <add key="isUseDefaultCredentials" value="false"/>
+    <add key="isEnableSSl" value="true"/>
     <add key="defaultUrl" value="http://localhost:53706/"/>
     <add key="NumberOfRecoredonQuestionList" value="50"/>
     <add key="SuperAdminUserPassword" value="admin!2#4"/>
@@ -71,7 +66,6 @@
     <add key="BookAppointmentLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx"/>
     <add key="website" value="consult.miraihealth.com"/>
   </appSettings>
-
   <system.web>
     <globalization culture="en-US" uiCulture="en"/>
     <customErrors mode="On" >
@@ -92,7 +86,6 @@
         <add namespace="System.Web.WebPages"/>
       </namespaces>
     </pages>
-   
   </system.web>
   <system.serviceModel>
     <bindings>
