--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -69,7 +69,8 @@
   <system.web>
     <globalization culture="en-US" uiCulture="en"/>
     <customErrors mode="On" >
-      </customErrors>
+      <error statusCode="404" redirect="~/Home/Static404" />
+    </customErrors>
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
     <authentication mode="Forms">
