--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -40,7 +40,7 @@
     <add key="NumberOfRecoredonQuestionList" value="50"/>
     <add key="SuperAdminUserPassword" value="admin!2#4"/>
     <add key="ResetPasswordLink" value="http://localhost:53706/reset-password"/>
-    <add key="DocApproveNotificationTextMsg" value="Hello, your Mirai Consult account has been validated. You are now ready to login and use our services. Mirai Health Team (service@miraihealth.com)"/>
+    <add key="DocApproveNotificationTextMsg" value="Hello, your Mirai Health account has been validated. You are now ready to login and use our services. Mirai Health Team (service@miraihealth.com)"/>
     <add key="DocRejectNotificationTextMsg" value="Hello, your registration request has been rejected by the administrator. Mirai Health Team (service@miraihealth.com)"/>
     <add key="OnDocAssignQuestionSendEmail" value="A user has addressed the following question to you."/>
     <add key="OnDocAssignQuestionSendSMS" value="Hello, Admin has assigned a question to you, please check your account and send us your best answer. Mirai Health Team (service@miraihealth.com)"/>
@@ -54,7 +54,7 @@
     <add key="OnDoctorEndoresedSendSMS" value="Hello, We are pleased to inform you that the doctor has endorsed you for answering the question. AskMirai Services Team"/>
     <add key="MiraiHealthEmail" value="mailto:ask@miraihealth.com"/>
     <add key="websiteUrl" value="consult.miraihealth.com"/>
-    <add key="shareMessage" value="has invited you to Mirai Consult"/>
+    <add key="shareMessage" value="has invited you to Mirai Health"/>
     <add key="DocConnectApptUrl" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx?doc="/>
     <add key="EmailVerificationLink" value="http://demo.vertisinfotech.com:7171/myDoctorEnhancement/app/book/appointment.aspx?doc="/>
     <add key="DoctorPhotosUrl" value="http://localhost:53706/Content/image/DoctorPhotos/"/>
