--- a/MiraiConsultMVC/Web.config
+++ b/MiraiConsultMVC/Web.config
@@ -5,10 +5,29 @@
   -->
 <configuration>
   <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" requirePermission="false"/>
+    <!--<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />-->
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
-
   </configSections>
+  <log4net>
+    <!-- Define some output appenders -->
+    <appender name="rollingFile" type="log4net.Appender.RollingFileAppender,log4net">
+      <param name="File" value="LOGS/log.txt"/>
+      <param name="AppendToFile" value="true"/>
+      <param name="RollingStyle" value="Date"/>
+      <param name="DatePattern" value="yyyy.MM.dd"/>
+      <param name="StaticLogFileName" value="true"/>
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c [%x] &lt;%X{auth}&gt; - %m%n"/>
+      </layout>
+    </appender>
+    <!-- Setup the root category, add the appenders and set the default priority -->
+    <root>
+      <priority value="ALL"/>
+      <appender-ref ref="rollingFile"/>
+    </root>
+  </log4net>
   <connectionStrings>
     <add name="AsquareMiraiConnectionString" connectionString="Data Source=10.10.10.41;Initial Catalog=AsquareMirai;Persist Security Info=True;User ID=sa;Password=vertis!2#"
       providerName="System.Data.SqlClient" />
