--- a/MiraiConsultMVC/packages.config
+++ b/MiraiConsultMVC/packages.config
@@ -7,6 +7,7 @@
   <package id="DotNetOpenAuth.OAuth.Core" version="4.3.4.13329" targetFramework="net46" userInstalled="true" />
   <package id="DotNetOpenAuth.OpenId.Core" version="4.3.4.13329" targetFramework="net46" userInstalled="true" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.3.4.13329" targetFramework="net46" userInstalled="true" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net46" userInstalled="true" />
   <package id="jQuery" version="2.1.4" targetFramework="net46" userInstalled="true" />
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net46" userInstalled="true" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net46" userInstalled="true" />
